remove review_queue
